[gd_scene load_steps=9 format=2]

[ext_resource path="res://template.png" type="Texture" id=1]
[ext_resource path="res://ParallaxBackground.gd" type="Script" id=2]
[ext_resource path="res://template (1).png" type="Texture" id=3]
[ext_resource path="res://b1.png" type="Texture" id=4]
[ext_resource path="res://b2.png" type="Texture" id=5]
[ext_resource path="res://b4.png" type="Texture" id=6]
[ext_resource path="res://b3.png" type="Texture" id=7]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=8]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 0 )

[node name="Template(1)" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 639, 358 )
texture = ExtResource( 3 )

[node name="Template" type="Sprite" parent="."]
position = Vector2( 633, 46 )
scale = Vector2( 0.506974, 0.588735 )
texture = ExtResource( 1 )

[node name="b1" type="TextureButton" parent="."]
margin_left = 21.0
margin_top = 327.0
margin_right = 442.0
margin_bottom = 436.0
rect_scale = Vector2( 0.640001, 0.640001 )
texture_normal = ExtResource( 4 )

[node name="b2" type="TextureButton" parent="."]
margin_left = 337.0
margin_top = 327.0
margin_right = 758.0
margin_bottom = 436.0
rect_scale = Vector2( 0.640001, 0.640001 )
texture_normal = ExtResource( 5 )

[node name="b3" type="TextureButton" parent="."]
margin_left = 655.0
margin_top = 327.0
margin_right = 1076.0
margin_bottom = 436.0
rect_scale = Vector2( 0.640001, 0.640001 )
texture_normal = ExtResource( 7 )

[node name="b4" type="TextureButton" parent="."]
margin_left = 979.0
margin_top = 327.0
margin_right = 1400.0
margin_bottom = 436.0
rect_scale = Vector2( 0.640001, 0.640001 )
texture_normal = ExtResource( 6 )

[connection signal="button_down" from="b1" to="." method="_on_b1_button_down"]
[connection signal="button_down" from="b2" to="." method="_on_b2_button_down"]
[connection signal="button_down" from="b3" to="." method="_on_b3_button_down"]
[connection signal="button_down" from="b4" to="." method="_on_b4_button_down"]
